# DataTable

./: .gitignore  CMakeLists.txt  README.md  mytable.csv
include/: DataColumn.h  DataTable.h  HashTable.h  StatusCodes.h
src/: CMakeLists.txt  DataColumn.c  DataColumn_Internal.c  DataTable.c  DataTable_Internal.c  HashTable.c  main.c  temp
test/: CMakeLists.txt
test/DataColumn/: CMakeLists.txt  dt_column_add.c  dt_column_append_value.c  dt_column_avg.c  dt_column_copy.c  dt_column_create.c  dt_column_divide.c  dt_column_fill_values.c  dt_column_filter.c  dt_column_iterate_rows.c  dt_column_max.c  dt_column_min.c  dt_column_multiply.c  dt_column_resize.c  dt_column_set_and_get_value.c  dt_column_strings.c  dt_column_subset.c  dt_column_subtract.c  dt_column_sum.c  dt_column_union.c  dt_column_union_multiple.c
test/DataTable/: CMakeLists.txt  dt_hash_table.c  dt_table_append.c  dt_table_append_column.c  dt_table_apply_all.c  dt_table_apply_column.c  dt_table_cast_columns.c  dt_table_check_isnull.c  dt_table_copy.c  dt_table_create.c  dt_table_distinct.c  dt_table_drop_columns.c  dt_table_drop_null.c  dt_table_fill_column.c  dt_table_filter.c  dt_table_filter_AND.c  dt_table_filter_OR.c  dt_table_get_column.c  dt_table_get_set_value.c  dt_table_insert_column.c  dt_table_insert_row.c  dt_table_join.c  dt_table_join_full.c  dt_table_join_inner.c  dt_table_join_left.c  dt_table_join_right.c  dt_table_read_csv.c  dt_table_replace_null.c  dt_table_sample_rows.c  dt_table_select.c  dt_table_split.c  dt_table_string.c  dt_table_to_csv.c
