add_executable(dt_column_create dt_column_create.c)
target_include_directories(dt_column_create PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_create datatable)
add_test(NAME dt_column_create COMMAND dt_column_create)

add_executable(dt_column_set_and_get_value dt_column_set_and_get_value.c)
target_include_directories(dt_column_set_and_get_value PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_set_and_get_value datatable)
add_test(NAME dt_column_set_and_get_value COMMAND dt_column_set_and_get_value)

add_executable(dt_column_append_value dt_column_append_value.c)
target_include_directories(dt_column_append_value PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_append_value datatable)
add_test(NAME dt_column_append_value COMMAND dt_column_append_value)

add_executable(dt_column_fill_values dt_column_fill_values.c)
target_include_directories(dt_column_fill_values PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_fill_values datatable)
add_test(NAME dt_column_fill_values COMMAND dt_column_fill_values)

add_executable(dt_column_iterate_rows dt_column_iterate_rows.c)
target_include_directories(dt_column_iterate_rows PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_iterate_rows datatable)
add_test(NAME dt_column_iterate_rows COMMAND dt_column_iterate_rows)

add_executable(dt_column_copy dt_column_copy.c)
target_include_directories(dt_column_copy PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_copy datatable)
add_test(NAME dt_column_copy COMMAND dt_column_copy)

add_executable(dt_column_filter dt_column_filter.c)
target_include_directories(dt_column_filter PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_filter datatable)
add_test(NAME dt_column_filter COMMAND dt_column_filter)

add_executable(dt_column_subset dt_column_subset.c)
target_include_directories(dt_column_subset PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_subset datatable)
add_test(NAME dt_column_subset COMMAND dt_column_subset)

add_executable(dt_column_resize dt_column_resize.c)
target_include_directories(dt_column_resize PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_resize datatable)
add_test(NAME dt_column_resize COMMAND dt_column_resize)

add_executable(dt_column_union dt_column_union.c)
target_include_directories(dt_column_union PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_union datatable)
add_test(NAME dt_column_union COMMAND dt_column_union)

add_executable(dt_column_union_multiple dt_column_union_multiple.c)
target_include_directories(dt_column_union_multiple PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_union_multiple datatable)
add_test(NAME dt_column_union_multiple COMMAND dt_column_union_multiple)

add_executable(dt_column_sum dt_column_sum.c)
target_include_directories(dt_column_sum PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_sum datatable)
add_test(NAME dt_column_sum COMMAND dt_column_sum)

add_executable(dt_column_avg dt_column_avg.c)
target_include_directories(dt_column_avg PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_avg datatable)
add_test(NAME dt_column_avg COMMAND dt_column_avg)

add_executable(dt_column_max dt_column_max.c)
target_include_directories(dt_column_max PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_max datatable)
add_test(NAME dt_column_max COMMAND dt_column_max)

add_executable(dt_column_min dt_column_min.c)
target_include_directories(dt_column_min PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_min datatable)
add_test(NAME dt_column_min COMMAND dt_column_min)

add_executable(dt_column_add dt_column_add.c)
target_include_directories(dt_column_add PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_add datatable)
add_test(NAME dt_column_add COMMAND dt_column_add)

add_executable(dt_column_subtract dt_column_subtract.c)
target_include_directories(dt_column_subtract PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_subtract datatable)
add_test(NAME dt_column_subtract COMMAND dt_column_subtract)

add_executable(dt_column_multiply dt_column_multiply.c)
target_include_directories(dt_column_multiply PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_multiply datatable)
add_test(NAME dt_column_multiply COMMAND dt_column_multiply)

add_executable(dt_column_divide dt_column_divide.c)
target_include_directories(dt_column_divide PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_divide datatable)
add_test(NAME dt_column_divide COMMAND dt_column_divide)

add_executable(dt_column_strings dt_column_strings.c)
target_include_directories(dt_column_strings PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_column_strings datatable)
add_test(NAME dt_column_strings COMMAND dt_column_strings)
