add_executable(dt_table_create dt_table_create.c)
target_include_directories(dt_table_create PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_table_create datatable)
add_test(NAME dt_table_create COMMAND dt_table_create)

add_executable(dt_table_insert_row dt_table_insert_row.c)
target_include_directories(dt_table_insert_row PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_table_insert_row datatable)
add_test(NAME dt_table_insert_row COMMAND dt_table_insert_row)

add_executable(dt_table_get_set_value dt_table_get_set_value.c)
target_include_directories(dt_table_get_set_value PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_table_get_set_value datatable)
add_test(NAME dt_table_get_set_value COMMAND dt_table_get_set_value)

add_executable(dt_table_select dt_table_select.c)
target_include_directories(dt_table_select PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_table_select datatable)
add_test(NAME dt_table_select COMMAND dt_table_select)

add_executable(dt_table_filter dt_table_filter.c)
target_include_directories(dt_table_filter PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_table_filter datatable)
add_test(NAME dt_table_filter COMMAND dt_table_filter)

add_executable(dt_table_filter_OR dt_table_filter_OR.c)
target_include_directories(dt_table_filter_OR PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_table_filter_OR datatable)
add_test(NAME dt_table_filter_OR COMMAND dt_table_filter_OR)

add_executable(dt_table_filter_AND dt_table_filter_AND.c)
target_include_directories(dt_table_filter_AND PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_table_filter_AND datatable)
add_test(NAME dt_table_filter_AND COMMAND dt_table_filter_AND)

add_executable(dt_table_get_column dt_table_get_column.c)
target_include_directories(dt_table_get_column PUBLIC ${DataTable_SOURCE_DIR}/include)
target_link_libraries(dt_table_get_column datatable)
add_test(NAME dt_table_get_column COMMAND dt_table_get_column)
